--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ del {
 }
 
 body {
-  font-family: "Poppins", Arial, Helvetica, sans-serif;
+  font-family:  'IBM Plex Sans Thai Looped', Arial, Helvetica, sans-serif;
   font-size: 17px;
   color: #000 ;
   background-color:#fff;
@@ -34,7 +34,7 @@ body {
 input,
 textarea,
 select {
-  font-family: "Poppins", Arial, Helvetica, sans-serif;
+  font-family:  'IBM Plex Sans Thai Looped', Arial, Helvetica, sans-serif;
   font-weight: 500;
 }
 
@@ -58,7 +58,7 @@ a:hover {
 p {
   line-height: 1.6em;
   font-size: 16px;
-  font-family: "Poppins", Arial;
+  font-family: "IBM Plex Sans Thai Looped", Arial;
   font-weight: 500;
   color: var(--Gray);
 }
@@ -82,3 +82,39 @@ br.clear {
   display: flex;
   justify-content: space-between;
 }
+@font-face {
+  font-family: 'IBM Plex Sans Thai Looped';
+  src: url('../src/components/assets/fonts/IBMPlexSansThaiLooped-Bold.woff2') format('woff2'),
+      url('../src/components/assets/fonts/IBMPlexSansThaiLooped-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'IBM Plex Sans Thai Looped';
+  src: url('../src/components/assets/fonts/IBMPlexSansThaiLooped-SemiBold.woff2') format('woff2'),
+      url('../src/components/assets/fonts/IBMPlexSansThaiLooped-SemiBold.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'IBM Plex Sans Thai Looped';
+  src: url('../src/components/assets/fonts/IBMPlexSansThaiLooped-Medium.woff2') format('woff2'),
+      url('../src/components/assets/fonts/IBMPlexSansThaiLooped-Medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'IBM Plex Sans Thai Looped';
+  src: url('../src/components/assets/fonts/IBMPlexSansThaiLooped-Regular.woff2') format('woff2'),
+      url('../src/components/assets/fonts/IBMPlexSansThaiLooped-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
